# MAHRU_WL_Ctrl

./: .gitignore  CMakeLists.txt  README.md  p_CoM_error.py  p_CoM_eval.py  p_CoM_xyplane.py  reaction_wheel_ref_eval.py
config/: config_weighted.yaml  fsm_BalanceCtrl_config.yaml  fsm_JPosCtrl_config.yaml  fsm_UnicycleCtrl_config.yaml
docs/: unicycle_flywheel.tex
include/: MJSimulationBridge.hpp  RobotDefinition.hpp  RobotStates.hpp  RobotStatesLogger.hpp
include/3rd-parties/: README.md
include/3rd-parties/ARBMLlib/: ARBML.cpp  ARBML.h  CommUtil.h  README.md  RigidBody.h  Robotics_func.h
include/Controller/ConvexMPC/: ConvexMpc.cpp  ConvexMpc.h  GaitGenerator.cpp  GaitGenerator.hpp  LocoCtrl.cpp  LocoCtrl.hpp  MahruCtrlStates.h  Robot_Params.h
include/Controller/ConvexMPC/utils/: Utils.h
include/Interface/MuJoCo/: SimulationInterface.cpp  SimulationInterface.hpp  simulate.cc  simulate.h  traj_viz_util.hpp
include/StateMachine/: FSM_BalanceCtrl.cpp  FSM_BalanceCtrl.hpp  FSM_JPosCtrl.cpp  FSM_JPosCtrl.hpp  FSM_UnicycleCtrl.cpp  FSM_UnicycleCtrl.hpp  StateMachineCtrl.cpp  StateMachineCtrl.hpp  States.hpp
include/Trajectory/: OnlineOptTraj.cpp  OnlineOptTraj.hpp
include/Utils/: JointTrajectory.h
include/WBC/: WBCTask.hpp  WeightedWBC.cpp  WeightedWBC.hpp
logs/: reaction_wheel_ref_eval.py
model/: MAHRU-WL_w_Battery.urdf  MAHRU-WL_w_Battery.xml  MAHRU-WL_w_Battery_passive.xml  MAHRU-WL_wo_Battery.urdf  MAHRU-WL_wo_Battery.xml  scene.xml
model/template/: robot.urdf  robot.xml  scene.xml
scripts/: create_FSM_task.py  reaction_wheel_ref_eval.py  tune_unicycle_weights.py
src/: MJSimulationBridge.cpp  main.cpp
